add auth to front-end
