# bff/src/controllers/users/auth.rs
@@ -1,6 +1,6 @@
 use std::future::{ready, Ready};
 
-use actix_web::cookie::{Cookie, SameSite};
+use actix_web::cookie::{time, Cookie, SameSite};
 use actix_web::error::ErrorBadRequest;
 use actix_web::{dev::Payload, error::InternalError, web, HttpRequest, HttpResponse};
 use actix_web::{post, FromRequest};
@@ -29,7 +29,7 @@ pub fn get_access_claims(custom: CustomClaims) -> Claims<CustomClaims> {
     let time_options = TimeOptions::default();
 
     Claims::new(custom)
-        .set_duration_and_issuance(&time_options, Duration::hours(1))
+        .set_duration_and_issuance(&time_options, Duration::seconds(20))
         .set_not_before(Utc::now() - Duration::hours(1))
 }
 
@@ -52,9 +52,18 @@ impl FromRequest for CustomClaims {
 
     fn from_request(req: &HttpRequest, _: &mut Payload) -> Self::Future {
         let access_token = req
-            .cookie(ACCESS_TOKEN_COOKIE_NAME)
-            .map(|cookie| cookie.value().to_string());
-        log::info!("Extracting token from cookie: {:?}", access_token);
+            .headers()
+            .get("Authorization")
+            .and_then(|header| header.to_str().ok())
+            .and_then(|header_str| {
+                if header_str.starts_with("Bearer ") {
+                    Some(header_str[7..].to_string())
+                } else {
+                    None
+                }
+            });
+
+        log::info!("Extracting token from header: {:?}", access_token);
 
         match access_token {
             Some(token_string) => {
@@ -90,31 +99,38 @@ impl FromRequest for CustomClaims {
 
 #[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
 pub struct LoginRequest {
-    pub user_id: Uuid,
+    pub email: String,
     pub password: String,
+}
+
+#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
+pub struct LoginResponse {
+    pub user_id: Uuid,
+    pub user_name: String,
+    pub user_email: String,
+    pub access_token: String,
+    pub refresh_token: String,
 }
 
 #[utoipa::path(
     request_body = LoginRequest,
     responses(
-        (status = 200, description = "Login user and set auth cookies"),
+        (status = 200, description = "Login user and set auth cookies", body = LoginResponse),
         (status = 500, description = "Internal Server Error")
     ),
     tag = TAG
 )]
-#[post("/login/{user_id}")]
+#[post("/login")]
 async fn login(body: web::Json<LoginRequest>) -> Result<HttpResponse, actix_web::Error> {
     let config = client_config();
-    let user = users_api::get_user_by_id(&config, &body.user_id.to_string())
+    let user = users_api::get_user_by_email(&config, &body.email)
         .await
-        .map_err(|e| handle_client_error_actix(e, &format!("Fetching user {}", body.user_id)))?;
+        .map_err(|e| handle_client_error_actix(e, &format!("Fetching user {}", body.email)))?;
 
     let key = get_key();
     let header = Header::empty().with_key_id("my-key");
 
-    let custom = CustomClaims {
-        user_id: body.user_id,
-    };
+    let custom = CustomClaims { user_id: user.id };
 
     let access_claims = get_access_claims(custom.clone());
     let refresh_claims = get_refresh_claims(custom);
@@ -125,29 +141,35 @@ async fn login(body: web::Json<LoginRequest>) -> Result<HttpResponse, actix_web:
 
     let refresh_string = Hs256.token(&header, &refresh_claims, &key).unwrap();
 
-    let cookie = Cookie::build(ACCESS_TOKEN_COOKIE_NAME, token_string)
-        .secure(true)
+    let refresh_cookie = Cookie::build(REFRESH_TOKEN_COOKIE_NAME, refresh_string.clone())
+        .path("/refresh")
         .http_only(true)
-        .same_site(SameSite::None)
-        .path("/")
-        .finish();
-
-    let refresh_cookie = Cookie::build(REFRESH_TOKEN_COOKIE_NAME, refresh_string)
-        .secure(true)
-        .http_only(true)
-        .same_site(SameSite::None)
-        .path("/")
+        .same_site(SameSite::Lax)
         .finish();
 
     Ok(HttpResponse::Ok()
-        .cookie(cookie)
         .cookie(refresh_cookie)
-        .json(user))
+        .json(LoginResponse {
+            user_id: user.id,
+            user_name: user.username,
+            user_email: user.email,
+            access_token: token_string,
+            refresh_token: refresh_string,
+        }))
+}
+
+#[derive(Debug, Clone, Serialize, Deserialize, ToSchema)]
+pub struct RefreshResponse {
+    pub user_id: Uuid,
+    pub user_name: String,
+    pub user_email: String,
+    pub access_token: String,
+    pub refresh_token: String,
 }
 
 #[utoipa::path(
     responses(
-        (status = 200, description = "Refresh tokens"),
+        (status = 200, description = "Refresh tokens", body = RefreshResponse),
         (status = 500, description = "Internal Server Error")
     ),
     tag = TAG
@@ -180,13 +202,27 @@ pub async fn refresh(req: HttpRequest) -> Result<HttpResponse, actix_web::Error>
 
     let user = refresh_token.claims().custom.clone();
 
+    let config = client_config();
+
+    let parsed_id = match Uuid::parse_str(&user.user_id.to_string()) {
+        Ok(id) => id,
+        Err(_) => return Err(ErrorBadRequest("Invalid UUID format")),
+    };
+
+    let result = users_api::get_user_by_id(&config, &*parsed_id.to_string()).await;
+    if let Err(err) = result {
+        return Err(handle_client_error_actix(
+            err,
+            &format!("Fetching user {}", user.user_id),
+        ));
+    }
+    let user = result.unwrap();
+
     // generation
     let key = get_key();
     let header = Header::empty().with_key_id("my-key");
 
-    let custom = CustomClaims {
-        user_id: user.user_id,
-    };
+    let custom = CustomClaims { user_id: user.id };
 
     let refresh_claims = get_refresh_claims(custom.clone());
     let access_claims = get_access_claims(custom.clone());
@@ -197,31 +233,46 @@ pub async fn refresh(req: HttpRequest) -> Result<HttpResponse, actix_web::Error>
     log::debug!("token: {refresh_string}");
     log::debug!("token: {access_string}");
 
-    let access_cookie = Cookie::build(ACCESS_TOKEN_COOKIE_NAME, access_string.clone())
-        .secure(true)
+    let cookie = Cookie::build(REFRESH_TOKEN_COOKIE_NAME, refresh_string.clone())
+        .path("/refresh")
         .http_only(true)
-        .same_site(SameSite::None)
-        .path("/")
+        .same_site(SameSite::Lax)
         .finish();
 
-    let refresh_cookie = Cookie::build(REFRESH_TOKEN_COOKIE_NAME, refresh_string.clone())
-        .secure(true)
+    Ok(HttpResponse::Ok().cookie(cookie).json(RefreshResponse {
+        user_id: user.id,
+        user_name: user.username,
+        user_email: user.email,
+        access_token: access_string,
+        refresh_token: refresh_string,
+    }))
+}
+
+#[utoipa::path(
+    responses(
+        (status = 200, description = "Logout user by clearing auth cookies"),
+        (status = 500, description = "Internal Server Error")
+    ),
+    tag = TAG
+)]
+#[post("/logout")]
+pub async fn logout() -> Result<HttpResponse, actix_web::Error> {
+    let expired_cookie = Cookie::build(REFRESH_TOKEN_COOKIE_NAME, "")
+        .path("/refresh")
         .http_only(true)
-        .same_site(SameSite::None)
-        .path("/")
+        .max_age(time::Duration::seconds(0))
+        .same_site(SameSite::Lax)
         .finish();
 
-    Ok(HttpResponse::Ok()
-        .cookie(access_cookie)
-        .cookie(refresh_cookie)
-        .finish())
+    Ok(HttpResponse::Ok().cookie(expired_cookie).body("Logged out"))
 }
 
 #[derive(utoipa::OpenApi)]
-#[openapi(paths(login, refresh))]
+#[openapi(paths(login, refresh, logout))]
 pub struct ApiDoc;
 
 pub fn auth_config(cfg: &mut utoipa_actix_web::service_config::ServiceConfig) {
     cfg.service(refresh);
     cfg.service(login);
+    cfg.service(logout);
 }
